--- a/356F/app/src/main/res/layout/login_page.xml
+++ b/356F/app/src/main/res/layout/login_page.xml
@@ -69,8 +69,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:text="Sign In"
                 android:textStyle="bold" />
+            <Button
+                android:id="@+id/btnReg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign UP"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                android:elevation="0dp"
+                android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
     </ScrollView>
