--- a/356F/app/src/main/res/layout/activity_new_post_page.xml
+++ b/356F/app/src/main/res/layout/activity_new_post_page.xml
@@ -1,13 +1,251 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_new_post_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.bunnyfung.a356f.newPostPage">
+    android:paddingBottom="-5dp"
+    android:paddingLeft="-5dp"
+    android:paddingRight="-5dp"
+    android:paddingTop="-5dp"
+    tools:context="com.example.bunnyfung.a356f.NewPostPage">
 
+    <TextView
+        android:text="Brand:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:id="@+id/tvBrand"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:layout_below="@+id/tvName"
+        android:layout_alignEnd="@+id/tvName"
+        android:paddingBottom="5dip" />
+
+    <TextView
+        android:text="Type:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:id="@+id/tvType"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:layout_below="@+id/tvBrand"
+        android:layout_alignEnd="@+id/tvBrand"
+        android:paddingBottom="5dip" />
+
+    <TextView
+        android:text="Price:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:id="@+id/tvPrice"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:layout_below="@+id/tvSize"
+        android:layout_alignEnd="@+id/tvSize"
+        android:paddingBottom="5dip" />
+
+    <TextView
+        android:text="Description:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:id="@+id/tvDescription"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:layout_below="@+id/tvPrice"
+        android:layout_alignEnd="@+id/tvPrice"
+        android:paddingBottom="5dip" />
+
+    <TextView
+        android:text="Size:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:id="@+id/tvSize"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:paddingBottom="5dip"
+        android:layout_below="@+id/tvType"
+        android:layout_alignEnd="@+id/tvType" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="ABC123"
+        android:ems="10"
+        android:id="@+id/tfName"
+        android:width="100dp"
+        android:paddingBottom="3dip"
+        android:paddingTop="3dip"
+        android:textSize = "14sp"
+        android:layout_above="@+id/tvBrand"
+        android:layout_toEndOf="@+id/tvName" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Adidas"
+        android:ems="10"
+        android:id="@+id/tfBrand"
+        android:width="100dp"
+        android:paddingBottom="3dip"
+        android:paddingTop="3dip"
+        android:textSize = "14sp"
+        android:layout_alignBaseline="@+id/tvBrand"
+        android:layout_alignBottom="@+id/tvBrand"
+        android:layout_toEndOf="@+id/tvBrand" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="ssss"
+        android:ems="10"
+        android:id="@+id/tfType"
+        android:width="100dp"
+        android:paddingBottom="3dip"
+        android:paddingTop="3dip"
+        android:textSize = "14sp"
+        android:layout_above="@+id/tvSize"
+        android:layout_toEndOf="@+id/tvType" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="10"
+        android:ems="10"
+        android:id="@+id/tfSize"
+        android:width="30dp"
+        android:paddingBottom="3dip"
+        android:paddingTop="3dip"
+        android:textSize = "14sp"
+        android:layout_above="@+id/tvPrice"
+        android:layout_toEndOf="@+id/tvSize" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="$100"
+        android:ems="10"
+        android:id="@+id/tfPrice"
+        android:paddingBottom="3dip"
+        android:paddingTop="3dip"
+        android:layout_above="@+id/tvDescription"
+        android:layout_toEndOf="@+id/tvPrice"
+        android:textSize = "14sp"
+        android:width="80dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="I am a boy"
+        android:ems="10"
+        android:id="@+id/tfDescription"
+        android:paddingBottom="80dip"
+        android:paddingTop="3dip"
+        android:layout_alignBaseline="@+id/tvDescription"
+        android:layout_alignBottom="@+id/tvDescription"
+        android:layout_toEndOf="@+id/tvDescription"
+        android:textSize = "14sp"
+        android:width="250dip" />
+
+    <TextView
+        android:text="Name:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvName"
+        android:layout_marginStart="54dp"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:layout_marginTop="219dp"
+        android:paddingBottom="5dip"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:text="(0.5)"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cbSize"
+        android:layout_alignBottom="@+id/tfSize"
+        android:layout_toEndOf="@+id/tfPrice" />
+
+    <ImageView
+        app:srcCompat="@android:drawable/ic_menu_report_image"
+        android:id="@+id/ivPhoto2"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="108dp" />
+
+    <ImageView
+        app:srcCompat="@android:drawable/ic_menu_report_image"
+        android:id="@+id/ivPhoto3"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="146dp" />
+
+    <ImageView
+        android:layout_height="55dp"
+        android:layout_width="55dp"
+        app:srcCompat="@android:drawable/ic_menu_report_image"
+        android:id="@+id/ivPhoto1"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="70dp" />
+
+    <ImageView
+        app:srcCompat="@android:drawable/ic_menu_report_image"
+        android:id="@+id/ivBigPhoto"
+        android:layout_alignParentTop="true"
+        android:layout_width="165dp"
+        android:layout_height="165dp"
+        android:layout_marginLeft="100dp" />
+
+    <ImageButton
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:id="@+id/ibAddPhoto"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="226dp" />
+
+    <ImageView
+        app:srcCompat="@android:drawable/ic_menu_report_image"
+        android:id="@+id/ivPhoto4"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="184dp" />
+
+    <Button
+        android:text="Submit"
+        android:textSize="13sp"
+        android:id="@+id/bPostSubmit"
+        android:layout_below="@+id/tfDescription"
+        android:layout_alignEnd="@+id/cbSize"
+        android:layout_width="100dp"
+        android:layout_height="40dp" />
+
+    <Button
+        android:text="Cancel"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:textSize="13sp"
+        android:id="@+id/bPostCancel"
+        android:layout_below="@+id/tfDescription"
+        android:layout_alignEnd="@+id/tfDescription" />
 </RelativeLayout>
