--- a/356F 2/app/src/main/res/layout/activity_profile_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_page.xml
@@ -92,7 +92,8 @@
         android:id="@+id/button4"
         android:layout_marginEnd="20dp"
         android:layout_below="@+id/button3"
-        android:layout_toStartOf="@+id/textView5" />
+        android:layout_toStartOf="@+id/textView5"
+        style="@style/Widget.AppCompat.Button" />
 
     <Button
         android:text="my score"
