--- a/356F 2/app/src/main/res/layout/activity_new_post_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_new_post_page.xml
@@ -149,7 +149,7 @@
         android:text="I am a boy"
         android:ems="10"
         android:id="@+id/tfDescription"
-        android:paddingBottom="80dip"
+        android:paddingBottom="20dip"
         android:paddingTop="3dip"
         android:layout_alignBaseline="@+id/tvDescription"
         android:layout_alignBottom="@+id/tvDescription"
@@ -234,7 +234,7 @@
     <Button
         android:text="Submit"
         android:textSize="13sp"
-        android:id="@+id/bPostSubmit"
+        android:id="@+id/btnPostSubmit"
         android:layout_below="@+id/tfDescription"
         android:layout_alignEnd="@+id/cbSize"
         android:layout_width="100dp"
