--- a/356F 2/app/src/main/res/layout/activity_product_detail_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_detail_page.xml
@@ -123,7 +123,9 @@
                     android:fontFamily="sans-serif-condensed"
                     android:typeface="normal"
                     android:textAlignment="center"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp"
+                    android:layout_marginBottom="10dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -243,12 +245,13 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textView28"
                     android:layout_weight="0.28"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="14dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Button"
                     android:textAlignment="center"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
