--- a/356F 2/app/src/main/res/layout/activity_offer_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_offer_page.xml
@@ -3,72 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_offer_page"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context="com.example.bunnyfung.a356f.OfferPage">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:text="Processing"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnProcessing"
-                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                android:textColor="#04B404"
-                android:width = "133dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true" />
-
-            <Button
-                android:text="Invitation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnInvitation"
-                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                android:textColor="#04B404"
-                android:width = "133dp"
-                android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/btnProcessing" />
-
-            <Button
-                android:text="Yours Offer"
-                android:layout_height="wrap_content"
-                android:id="@+id/btnYoursOffer"
-                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                android:textColor="#04B404"
-                android:textAlignment="center"
-                android:width = "117dp"
-                android:layout_width="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
-
-
-
-        </RelativeLayout>
-
-
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="45dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -77,7 +20,7 @@
                 android:text="User:"
                 android:textSize="16sp"
                 android:textColor="@android:color/holo_orange_dark"
-                android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="15dp" />
 
         <TextView
                 android:text="Edwin Ho"
@@ -85,204 +28,188 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tvUser"
                 android:textSize="14sp"
-                android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="5dp" />
 
 
     </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+    <LinearLayout
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
 
-             <ImageView
-                 android:layout_height="115dp"
-                 app:srcCompat="@android:drawable/sym_def_app_icon"
-                 android:id="@+id/ivPhoto"
-                 android:layout_weight="1"
-                 android:layout_width="107dp"
-                 android:layout_marginTop="90dp" />
-            <LinearLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="90dp"
-                android:orientation="horizontal"
-                android:layout_marginLeft="110dp">
+        <ImageView
+            android:layout_height="120dp"
+            android:layout_width="120dp"
+            app:srcCompat="@android:drawable/sym_def_app_icon"
+            android:id="@+id/ivPhoto"
+            android:layout_weight="1" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+    </LinearLayout>
 
-                    <TextView
-                        android:text="I am a boy and she is a girl."
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/tvDescription"
-                        android:textSize="14sp"
-                        android:layout_weight="0.30"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginTop="19dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="130dp">
 
-                    <TextView
-                        android:text="Description:"
-                        android:id="@+id/tv02"
-                        android:layout_weight="0.30"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:textColor="@android:color/holo_orange_dark"
-                        android:layout_marginRight="10dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true" />
+        <TextView
+            android:text="Description:"
+            android:id="@+id/tv02"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textColor="@android:color/holo_orange_dark" />
 
-                </RelativeLayout>
+        <TextView
+            android:text="Price: $100"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:id="@+id/tv03"
+            android:textSize="16sp"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold|italic" />
 
-            </LinearLayout>
+    </LinearLayout>
 
-            <LinearLayout
-                android:layout_height="150dp"
-                android:orientation="horizontal"
-                android:layout_marginLeft="210dp"
-                android:layout_width="175dp"
-                android:layout_marginTop="90dp">
+    <LinearLayout
+        android:layout_width="120dp"
+        android:layout_marginLeft="130dp"
+        android:orientation="vertical"
+        android:layout_marginTop="50dp"
+        android:layout_height="60dp">
 
-              <RelativeLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="150dp">
-
-                <TextView
-                    android:text="Price: $100"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:id="@+id/tv03"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textStyle="bold|italic"
-                    android:layout_marginRight="56dp"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:text="Date:"
-                    android:id="@+id/tv04"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/holo_orange_dark"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="110dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="110dp" />
-
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:textSize="14sp"
-                      android:text="26/11/2016"
-                      android:id="@+id/tvDate"
-                      android:layout_alignBaseline="@+id/tv04"
-                      android:layout_alignBottom="@+id/tv04"
-                      android:layout_marginBottom="110dp"
-                      android:layout_marginLeft="70dp"
-                      android:layout_marginRight="20dp"
-                      android:layout_alignParentStart="true" />
-
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:text="Time:"
-                      android:id="@+id/tv05"
-                      android:textSize="16sp"
-                      android:textColor="@android:color/holo_orange_dark"
-                      android:layout_marginTop="50dp"
-                      android:layout_marginBottom="80dp"
-                      android:layout_marginLeft="20dp"
-                      android:layout_marginRight="110dp"/>
-
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:textSize="14sp"
-                      android:text="05:25 pm"
-                      android:id="@+id/tvTime"
-                      android:layout_alignBaseline="@+id/tv05"
-                      android:layout_alignBottom="@+id/tv05"
-                      android:layout_marginBottom="80dp"
-                      android:layout_marginLeft="70dp"
-                      android:layout_marginRight="40dp"
-                      android:layout_alignParentStart="true" />
+        <TextView
+            android:text="I am a boy and she is a girl."
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:id="@+id/tvDescription"
+            android:textSize="12sp"
+            android:layout_weight="0.30" />
 
 
-              </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="50dp">
+
+        <TextView
+            android:text="Date:"
+            android:id="@+id/tv04"
+            android:layout_weight="0.1"
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            android:textSize="16sp"
+            android:textColor="@android:color/holo_orange_dark" />
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_weight="0.9"
+            android:textSize="12sp"
+            android:text="26/11/2016"
+            android:id="@+id/tvDate"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:weightSum="1"
+        android:orientation="horizontal"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="70dp">
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_weight="0.1"
+            android:text="Time:"
+            android:id="@+id/tv05"
+            android:textSize="16sp"
+            android:textColor="@android:color/holo_orange_dark" />
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_weight="0.9"
+            android:textSize="12sp"
+            android:text="05:25 pm"
+            android:layout_marginRight="10dp"
+            android:id="@+id/tvTime" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="95dp">
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:text="Place:"
+            android:id="@+id/tv06"
+            android:textSize="16sp"
+            android:textColor="@android:color/holo_orange_dark" />
+
+        <TextView
+            android:layout_width="180dp"
+            android:layout_height="20dp"
+            android:text="North Point MTR Station"
+            android:id="@+id/tvPlace"
+            android:textSize="12sp" />
 
 
-            </LinearLayout>
+    </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginTop="165dp">
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="150dp"
+        android:weightSum="2">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+        <Button
+            android:text="Accept"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/btn1"
+            android:background="@android:color/holo_orange_light"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_weight="1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Place:"
-                    android:id="@+id/tv06"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/holo_orange_dark"
-                    android:layout_marginBottom="230dp"
-                    android:layout_marginLeft="110dp"
-                    android:layout_marginRight="225dp"/>
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="North Point MTR Station"
-                    android:id="@+id/tvPlace"
-                    android:textSize="14sp"
-                    android:layout_marginRight="60dp"
-                    android:layout_marginLeft="160dp"
-                    android:layout_marginBottom="230dp"/>
+        <Button
+            android:text="Decline"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/btn2"
+            android:background="@android:color/holo_orange_light"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_weight="1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
 
 
-                    <Button
-                        android:text="Accept"
-                        android:layout_width="150dp"
-                        android:layout_height="40dp"
-                        android:id="@+id/btn1"
-                        android:background="@android:color/holo_orange_light"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:layout_marginTop="50dp"
-                        android:layout_marginLeft="25dp"
-                        android:layout_alignParentLeft="true" />
-
-                    <Button
-                        android:text="Decline"
-                        android:layout_width="150dp"
-                        android:layout_height="40dp"
-                        android:id="@+id/btn2"
-                        android:background="@android:color/holo_orange_light"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:layout_marginTop="50dp"
-                        android:layout_marginRight="25dp"
-                        android:layout_alignParentRight="true" />
 
 
-                </RelativeLayout>
+        </LinearLayout>
 
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-    // 唔好亂咁禁revert :O
     </RelativeLayout>
 
 
