--- a/356F 2/app/src/main/res/layout/activity_profile_history_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_history_page.xml
@@ -15,9 +15,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="12dp">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -57,7 +56,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="100dp">
 
                 <TextView
                     android:text="user"
@@ -70,7 +69,7 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp">
+                    android:layout_height="match_parent">
 
                     <ImageView
                         android:layout_width="50dp"
