--- a/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_profile_edit_page"
     android:layout_width="match_parent"
@@ -12,13 +13,13 @@
 
     <ImageButton
         android:layout_width="130dp"
-        app:srcCompat="@mipmap/ic_launcher"
         android:layout_marginTop="15dp"
         android:id="@+id/ivIcon"
         android:layout_marginStart="23dp"
         android:layout_height="130dp"
         android:layout_below="@+id/btnLogout"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:text="user ID :"
