--- a/356F 2/app/src/main/res/layout/activity_profile_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_page.xml
@@ -36,30 +36,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:id="@+id/tvNameID"
-        android:layout_below="@+id/tvNameID"
-        android:layout_alignStart="@+id/tvNameID" />
+        android:layout_below="@+id/tvUserID"
+        android:layout_alignStart="@+id/tvUserID" />
 
     <TextView
         android:text="user ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:id="@+id/tvNameID"
+        android:id="@+id/tvUserID"
         android:layout_alignTop="@+id/ivIcon"
         android:layout_toEndOf="@+id/ivIcon"
-        android:layout_marginStart="38dp" /><![CDATA[
-
-
-
-    =======
-        android:layout_below="@+id/button3"
-        android:layout_toStartOf="@+id/textView5"
-        style="@style/Widget.AppCompat.Button" />
->>>>>>> origin/master
-
-
-
-    ]]>
+        android:layout_marginStart="38dp" />
 
     <TextView
         android:text="phone number"
@@ -147,7 +135,6 @@
         android:layout_alignBottom="@+id/textView2"
         android:layout_toEndOf="@+id/tvPhoneNumber" />
 
-<<<<<<< HEAD
     <ImageButton
         android:layout_width="130dp"
         app:srcCompat="@mipmap/ic_launcher"
@@ -157,7 +144,7 @@
         android:layout_height="130dp"
         android:layout_below="@+id/btnLogout"
         android:layout_alignParentStart="true" />
-=======
+
     <Button
         android:text="wish list"
         android:layout_width="match_parent"
@@ -165,7 +152,6 @@
         android:id="@+id/button4"
         android:layout_marginEnd="20dp"
         android:layout_below="@+id/button3"
-        android:layout_toStartOf="@+id/textView5"
         style="@style/Widget.AppCompat.Button" />
 
     <Button
@@ -175,6 +161,6 @@
         android:layout_above="@+id/button4"
         android:layout_toEndOf="@+id/button3"
         android:id="@+id/button5" />
->>>>>>> origin/master
+
 
 </RelativeLayout>
