login fucnton work

--- a/356F 2/app/src/main/res/layout/login_page.xml
+++ b/356F 2/app/src/main/res/layout/login_page.xml
@@ -32,7 +32,7 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/mUserid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
@@ -92,4 +92,18 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|end">
+
+        <Button
+            android:text="Auto Fill"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAutofill" />
+    </LinearLayout>
+
 </LinearLayout>
