--- a/356F 2/app/src/main/res/layout/activity_main_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_main_page.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="com.example.bunnyfung.a356f.MainPage"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.bunnyfung.a356f.MainPage">
+    android:orientation="vertical">
 
-</RelativeLayout>
+</LinearLayout>
