--- a/356F 2/app/src/main/res/layout/activity_profile_history_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_history_page.xml
@@ -35,74 +35,23 @@
                 android:text="month"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/button2"
+                android:id="@+id/btnMonth"
                 android:layout_weight="1" />
 
             <Button
                 android:text="year"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/button"
+                android:id="@+id/btnYear"
                 android:layout_weight="1" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
+        <ListView
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="100dp">
-
-                <TextView
-                    android:text="user"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/user"
-                    android:textStyle="normal|bold"
-                    android:textSize="24sp" />
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        app:srcCompat="@mipmap/ic_launcher"
-                        android:id="@+id/ivProductIcon"
-                        android:layout_weight="1"
-                        android:adjustViewBounds="true" />
-
-                    <TextView
-                        android:text="introduction"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textIntroduction"
-                        android:layout_weight="1"
-                        android:textSize="16sp"
-                        android:textStyle="normal|bold"
-                        android:textAlignment="center"
-                        android:layout_width="90dp" />
-
-                    <TextView
-                        android:text="price"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textPrice"
-                        android:layout_weight="1"
-                        android:textSize="24sp"
-                        android:textStyle="normal|bold"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
+            android:id="@+id/history_list" />
 
     </LinearLayout>
 </RelativeLayout>
