--- a/356F 2/app/src/main/res/layout/activity_main_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_main_page.xml
@@ -5,10 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.bunnyfung.a356f.MainPage"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="android.support.v4.app.ListFragment"
+        android:id="@+id/fmMain"
+        android:layout_weight="0.88" />
+
+    <fragment
+        android:layout_width="match_parent"
+        android:name="android.support.v4.app.ListFragment"
+        android:id="@+id/fmMenu"
+        android:layout_height="50dp" />
 </LinearLayout>
