Logout Function Work

--- a/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.franky.fragmenttest1.FragOffer">
+    tools:context="com.example.bunnyfung.a356f.FragOffer">
 
     <LinearLayout
         android:orientation="vertical"
