--- a/356F 2/app/src/main/res/layout/fragment_frag_meun.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_meun.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.example.franky.fragmenttest1.FragMeun">
+    tools:context="com.example.bunnyfung.a356f.FragMeun">
 
 
     <LinearLayout
