--- a/356F 2/app/src/main/res/layout/fragment_frag_new_post.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_new_post.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.franky.fragmenttest1.FragNewPost">
+    tools:context="com.example.bunnyfung.a356f.FragNewPost">
 
     <RelativeLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
