--- a/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
@@ -1,11 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.franky.fragmenttest1.FragProfile">
 
     <RelativeLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_profile_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,8 +19,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnLogout"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:elevation="0dp" />
+            android:elevation="0dp"
+            android:layout_toEndOf="@+id/tvUserID" />
 
         <TextView
             android:text="creditworthiness"
@@ -63,9 +63,10 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:paddingBottom="10dp">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -120,7 +121,7 @@
                     android:layout_weight="1" />
 
                 <Button
-                    android:text="deposit/withdraw $$"
+                    android:text="deposit/withdraw"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnMoney"
@@ -152,8 +153,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button4"
-            android:layout_marginEnd="20dp"
-            style="@style/Widget.AppCompat.Button" />
+            style="@style/Widget.AppCompat.Button"
+            android:layout_toStartOf="@+id/tvNameID" />
 
         <Button
             android:text="my score"
