--- a/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.franky.fragmenttest1.FragProfile">
+    tools:context="com.example.bunnyfung.a356f.FragProfile">
 
     <RelativeLayout
         android:id="@+id/activity_profile_page"
@@ -13,6 +13,16 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView1"
+            android:id="@+id/tvUserid"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@+id/textView1" />
+
         <Button
             android:text="logout"
             android:layout_width="match_parent"
@@ -20,7 +30,7 @@
             android:id="@+id/btnLogout"
             android:layout_alignParentTop="true"
             android:elevation="0dp"
-            android:layout_toEndOf="@+id/tvUserID" />
+            android:layout_toEndOf="@+id/textView1" />
 
         <TextView
             android:text="creditworthiness"
@@ -28,37 +38,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="19dp"
-            android:id="@+id/textView2"
             android:layout_below="@+id/ivIcon"
             android:layout_alignStart="@+id/ivIcon" />
 
         <TextView
-            android:text="name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
-            android:id="@+id/tvNameID"
-            android:layout_below="@+id/tvUserID"
-            android:layout_alignStart="@+id/tvUserID" />
-
-        <TextView
-            android:text="user ID"
+            android:text="user ID:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
-            android:id="@+id/tvUserID"
+            android:id="@+id/textView1"
             android:layout_alignTop="@+id/ivIcon"
             android:layout_toEndOf="@+id/ivIcon"
             android:layout_marginStart="38dp" />
-
-        <TextView
-            android:text="phone number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvPhoneNumber"
-            android:layout_above="@+id/btnEdit"
-            android:layout_alignStart="@+id/tvNameID"
-            android:layout_marginBottom="12dp" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -130,14 +121,6 @@
 
         </LinearLayout>
 
-        <Button
-            android:text="edit"
-            android:layout_width="55dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnEdit"
-            android:layout_alignBottom="@+id/textView2"
-            android:layout_toEndOf="@+id/tvPhoneNumber" />
-
         <ImageButton
             android:layout_width="130dp"
             app:srcCompat="@mipmap/ic_launcher"
@@ -148,20 +131,67 @@
             android:layout_below="@+id/btnLogout"
             android:layout_alignParentStart="true" />
 
+        <TextView
+            android:text="name:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_below="@+id/textView1"
+            android:layout_alignStart="@+id/textView1"
+            android:id="@+id/textview2" />
+
         <Button
             android:text="wish list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button4"
             style="@style/Widget.AppCompat.Button"
-            android:layout_toStartOf="@+id/tvNameID" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/ivIcon" />
+
+        <Button
+            android:text="edit"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
+            android:id="@+id/btnEdit"
+            android:layout_marginEnd="13dp"
+            android:layout_below="@+id/ivIcon"
+            android:layout_alignParentEnd="true" />
 
         <Button
             android:text="my score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/button4"
-            android:id="@+id/button5" />
+            android:layout_below="@+id/btnEdit"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvEmail"
+            android:layout_alignBaseline="@+id/textview3"
+            android:layout_alignBottom="@+id/textview3"
+            android:layout_alignStart="@+id/tvName" />
+
+        <TextView
+            android:text="email:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textview3"
+            android:layout_marginTop="17dp"
+            android:layout_below="@+id/textview2"
+            android:layout_alignEnd="@+id/textview2" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:id="@+id/tvName"
+            android:layout_alignBaseline="@+id/textview2"
+            android:layout_alignBottom="@+id/textview2"
+            android:layout_toEndOf="@+id/textView1" />
     </RelativeLayout>
 
 
