--- a/356F 2/app/src/main/res/layout/activity_product_detail_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_detail_page.xml
@@ -145,7 +145,7 @@
                         android:text="ACBD12344"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tvName"
+                        android:id="@+id/textView2"
                         android:layout_weight="1"
                         android:textColor="@android:color/background_dark" />
                 </LinearLayout>
