account object changed

--- a/356F 2/app/src/main/res/layout/content_make_offer_page.xml
+++ b/356F 2/app/src/main/res/layout/content_make_offer_page.xml
@@ -16,7 +16,7 @@
 
 
     <TextView
-        android:text="MARK OFFER"
+        android:text="MAKE OFFER"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView12"
