--- a/356F 2/app/src/main/res/layout/activity_transaction_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_transaction_page.xml
@@ -17,28 +17,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <TextView
-            android:text="Deposit/Withdraw"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6"
-            android:textSize="28sp"
-            android:textColor="@color/common_plus_signin_btn_text_light_focused"
-            android:gravity="center"
-            android:layout_marginBottom="25dp" />
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="50dp">
 
             <RadioButton
                 android:text="deposit"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/radDeposit"
-                android:layout_weight="1"
-                android:layout_marginStart="15dp" />
+                android:layout_weight="1" />
 
             <RadioButton
                 android:text="withdraw"
@@ -49,66 +38,14 @@
                 android:checked="false" />
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="Enter amount:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView10"
-                android:layout_weight="1"
-                android:textSize="18sp"
-                android:layout_marginStart="15dp" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/edtAmount"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="Credit Card:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView10"
-                android:textSize="18sp"
-                android:layout_marginStart="15dp" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/edtAmount"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <TextView
-            android:text="Current Amount: $1000"
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView17"
-            android:textSize="18sp"
-            android:textAlignment="center" />
-
-        <TextView
-            android:text="Enter Security Code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView22"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="10dp" />
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/account"
+            android:singleLine="true"
+            android:hint="account" />
 
         <EditText
             android:layout_width="match_parent"
@@ -117,14 +54,12 @@
             android:ems="10"
             android:id="@+id/password"
             android:singleLine="true"
-            android:hint="@string/prompt_password"
-            android:layout_marginStart="15dp" />
+            android:hint="@string/prompt_password" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="40dp">
+            android:layout_height="50dp">
 
             <Button
                 android:text="cancel"
