--- a/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
@@ -33,37 +33,14 @@
         android:layout_marginTop="34dp" />
 
     <TextView
-        android:text="name :"
+        android:text="xxxxxxx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView1"
-        android:layout_alignStart="@+id/textView1"
-        android:layout_marginTop="23dp" />
-
-    <TextView
-        android:text="phone number :"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/textview3"
-        android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/textView2" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="xxxx"
-        android:ems="10"
-        android:id="@+id/edtName"
-        android:width="100dp"
-        android:paddingBottom="3dip"
-        android:paddingTop="3dip"
-        android:textSize="14sp"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_toEndOf="@+id/textView1" />
+        android:id="@+id/tvUserid"
+        android:layout_alignBaseline="@+id/textView1"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_toEndOf="@+id/textView1"
+        android:layout_marginStart="35dp" />
 
     <EditText
         android:inputType="number"
@@ -72,8 +49,18 @@
         android:layout_width="100dp"
         android:text="999"
         android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/ivIcon" />
+        android:layout_below="@+id/tvUserid"
+        android:layout_toEndOf="@+id/ivIcon"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:text="phone number :"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textview3"
+        android:layout_alignBaseline="@+id/edtPhoneNum"
+        android:layout_alignBottom="@+id/edtPhoneNum"
+        android:layout_alignStart="@+id/textView1" />
 
     <Button
         android:text="Submit"
@@ -81,55 +68,19 @@
         android:id="@+id/btnSubmit"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/rbF"
-        android:layout_toStartOf="@+id/edtPhoneNum"
-        android:layout_marginTop="66dp" />
-
-    <TextView
-        android:text="xxxxxxx"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvUserid"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignEnd="@+id/rbF"
-        android:layout_marginEnd="18dp" />
+        android:layout_below="@+id/edtPhoneNum"
+        android:layout_alignStart="@+id/textview3"
+        android:layout_marginTop="58dp" />
 
     <Button
         android:text="cancel"
         android:textSize="13sp"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_alignTop="@+id/btnSubmit"
-        android:layout_toEndOf="@+id/rbF"
-        android:id="@+id/btnCancel" />
-
-    <RadioButton
-        android:text="M"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rbM"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_toStartOf="@+id/edtPhoneNum" />
-
-    <RadioButton
-        android:text="F"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rbF"
-        android:layout_alignBaseline="@+id/rbM"
-        android:layout_alignBottom="@+id/rbM"
-        android:layout_toEndOf="@+id/rbM"
-        android:layout_marginStart="16dp" />
-
-    <TextView
-        android:text="sex :"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/edtPhoneNum"
-        android:layout_alignStart="@+id/textview3" />
+        android:id="@+id/btnCancel"
+        android:layout_marginStart="30dp"
+        android:layout_alignBaseline="@+id/btnSubmit"
+        android:layout_alignBottom="@+id/btnSubmit"
+        android:layout_alignStart="@+id/edtPhoneNum" />
 
 </RelativeLayout>
